<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="checkPwd">Check Password</string>
    <string name="nickname">Nickname</string>
    <string name="birth">Birth</string>
    <string name="choiceSex">성별 선택(필수)</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="none">Nothing</string>
    <string name="join">JOIN</string>
    <string name="agree">약관 동의 체크박수(필수)</string>
    <string name="marketingAgree">마케팅 동의 체크박수(선택)</string>
    <string name="welcome">회원이 된 것을 축하합니다!</string>
    <string name="putYourInfo">회원 정보를 입력해주세요</string>
</resources>
