<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <android.support.design.widget.TextInputLayout
            android:id="@+id/editIDLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">
        ​
        <EditText
                android:id="@+id/editID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/black" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">
        ​
        <EditText
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/pwd"
                android:inputType="text"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/black" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">
        ​
        <EditText
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/checkPwd"
                android:inputType="text"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/black" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">
        ​
        <EditText
                android:id="@+id/f"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/nickname"
                android:inputType="text"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/black" />
    </android.support.design.widget.TextInputLayout>
        ​
    <android.support.design.widget.TextInputLayout
                android:id="@+id/g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">
            ​
    </android.support.design.widget.TextInputLayout>
    <RadioGroup android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="horizontal">
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/man"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/woman"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/none"/>

    </RadioGroup>
    <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
    android:text="@string/join"/>
</LinearLayout>